# OpenChar

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SIM_APPROACH  TODOs
.claude/skills/tcl_test/: SKILL.md
.github/workflows/: build-and-test.yml  build-doc.yml
doc/manual/: CMakeLists.txt  build.sh  doc_generator.cpp  openchar_manual.tex
doc/manual/commands/: characterize_library.tex  define_cell.tex  define_template.tex  help.tex  read_spice.tex  report_app_vars.tex  set_gnd.tex  set_operating_condition.tex  set_vdd.tex  write_library.tex  write_verilog.tex
doc/manual/variables/: delay_in_fall.tex  delay_in_rise.tex  delay_out_fall.tex  delay_out_rise.tex  max_threads.tex  run_directory.tex  sim_timestep.tex  slew_lower_fall.tex  slew_lower_rise.tex  slew_upper_fall.tex  slew_upper_rise.tex
src/: CMakeLists.txt  open_char.cpp  open_char.h
src/Common/: CMakeLists.txt  StackTrace.cpp  StackTrace.h  Utils.cpp  Utils.h
src/Model/: Arc.cpp  Arc.h  CMakeLists.txt  Cell.cpp  Cell.h  Context.cpp  Context.h  DelayTable.cpp  DelayTable.h  Expression.cpp  Expression.h  FlipFlop.cpp  FlipFlop.h  Library.cpp  Library.h  LogicTable.cpp  LogicTable.h  OpCond.cpp  OpCond.h  Pin.cpp  Pin.h  Sequential.cpp  Sequential.h  Supply.cpp  Supply.h  Template.cpp  Template.h  TimingArc.cpp  TimingArc.h  Variables.cpp  Variables.h
src/Simulation/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Simulation.cpp  Simulation.h  SimulationPool.cpp  SimulationPool.h  Stimulus.cpp  Stimulus.h  Waves.cpp  Waves.h
src/Tcl/: CMakeLists.txt  TclCmd.cpp  TclCmd.h  TclCmdDefs.cpp  TclCmdDefs.h  TclCmdOpt.cpp  TclCmdOpt.h  TclVars.cpp  TclVars.h
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt  CalculateComLogicFunctionTest.cpp  CalculateComboLogicFunctionTest.cpp  CalculateLogicFunctionTest.cpp  ExtractLogicTableTest.cpp  MeasureComDelayTransitionPowerTest.cpp  MeasureComLogicTableLeakageTest.cpp  MeasureComboDelayPowerTransitionTest.cpp  MeasureComboDelayTest.cpp  MeasureComboDelayTransitionPowerTest.cpp  MeasureComboLogicTableAndLeakageTest.cpp  MeasureComboLogicTableLeakageTest.cpp  MeasureFFClockDelayPowerTransitionTest.cpp  MeasureFFClockPolarityTest.cpp  MeasureFFHoldTest.cpp  MeasureFFSetupTest.cpp  MeasureInputCapTest.cpp  MeasureLeakageTest.cpp  MeasureLogicTableAndLeakageTest.cpp  MeasureSeqCellKindTest.cpp  MeasureSeqEdgeOrLvlTest.cpp  MeasureSequentialCellKindTest.cpp  MeasureSetupTest.cpp
test/common/: TestUtils.h  basic_gates.cdl  buf.cdl
test/model/: CMakeLists.txt  ContextTest.cpp
test/netlists/: basic_gates.cdl
test/tcl/: CMakeLists.txt  test_script.sh
test/tcl/define_cell/: script.tcl  stderr.txt  stdout.txt
test/tcl/define_template/: script.tcl  stderr.txt  stdout.txt
test/tcl/set_gnd/: script.tcl  stderr.txt  stdout.txt
test/tcl/set_operating_condition/: script.tcl  stderr.txt  stdout.txt
test/tcl/set_vdd/: script.tcl  stderr.txt  stdout.txt
test/unit/: CMakeLists.txt  ContextTest.cpp  ExpressionTest.cpp  ExtractLogicTableTest.cpp  SupplyTest.cpp  VariablesTest.cpp
